# sdk.rs

./: .coderabbit.yaml  .gitignore  Cargo.toml  README.md
.github/workflows/: cargo.yml  crates.yml
examples/: advanced.rs  basic.rs  batch.rs  files.rs  text.rs
src/: client.rs  config.rs  error.rs  lib.rs  test_helpers.rs
src/domain/: mod.rs
src/file/: mod.rs  models.rs
src/tag/: mod.rs
src/text/: mod.rs  models.rs
src/url/: builder.rs  mod.rs  models.rs
